merge(Huge merge done): for the testing purposes merge done
* typed restructured
* *.md files added for the description
* cypress configuration added
* babel-preset to pre-process build added
* eslint updated and optimized
* peer-dependencies fixed
* prettier configuration optimized
* ts-builder updated and the configuration was optimized
* UI for the mobile version (Tokens lists & Balances lists) now uses horizontal space correctly (https://cln.sh/55504B)

...and countless more optimizations...

--- a/.prettierignore
+++ b/.prettierignore
@@ -7,6 +7,8 @@ src/static/*
 environments/*
 public/*
 _nuxt/*
-*sw.js
+*src/static/sw.js
+.eslintrc.js
 tests/*
 *.example
+*src/assets/fonts/remix/*
