--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,24 +1,16 @@
 {
   "extends": [
-    "stylelint-config-standard",
-    "stylelint-config-recommended"
+    "stylelint-config-standard"
   ],
   "plugins": [
     "stylelint-scss"
   ],
   "rules": {
-    "at-rule-empty-line-before": [
-      "always",
-      {
-        "ignore": [
-          "after-comment"
-        ]
-      }
-    ],
-    "at-rule-no-unknown": null,
+    "block-no-empty": null,
+    "at-rule-no-unknown": false,
     "block-opening-brace-newline-after": "always",
     "color-named": "never",
-    "custom-property-empty-line-before": "never",
+    "custom-property-empty-line-before": false,
     "declaration-block-semicolon-newline-after": "always",
     "font-family-name-quotes": "always-where-recommended",
     "font-weight-notation": "numeric",
@@ -29,16 +21,15 @@
         "indentInsideParens": "once-at-root-twice-in-block"
       }
     ],
-    "max-nesting-depth": false,
-    "no-descending-specificity": true,
-    "no-duplicate-selectors": true,
+    "no-descending-specificity": null,
+    "declaration-block-trailing-semicolon": false,
+    "no-duplicate-selectors": "never",
     "no-empty-source": [
       true,
       {
         "severity": "warning"
       }
     ],
-    "number-leading-zero": "never",
     "property-no-unknown": [
       true,
       {
@@ -71,9 +62,7 @@
     ],
     "string-quotes": "double",
     "value-list-comma-newline-before": "never-multi-line",
-    "value-no-vendor-prefix": true
-  },
-  "plugins": [
-    "stylelint-scss"
-  ]
+    "value-no-vendor-prefix": true,
+    "selector-pseudo-element-colon-notation": ""
+  }
 }
