--- a/package.json
+++ b/package.json
@@ -74,13 +74,13 @@
     "lint-style:fix": "stylelint --config .stylelintrc --ignore-path .stylelintrc src/"
   },
   "dependencies": {
+    "@matterlabs/zk-wallet-onboarding": "1.18.6",
     "@nuxt/components": "latest",
     "@nuxt/http": "^0.6.4",
     "@nuxt/typescript-runtime": "latest",
     "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/sentry": "latest",
     "@nuxtjs/toast": "latest",
-    "bnc-onboard": "latest",
     "ethereum-blockies-base64": "^1.0.2",
     "ethers": "latest",
     "lottie-web": "^5.7.8",
@@ -89,7 +89,6 @@
     "nuxt-build-optimisations": "^1.0.3",
     "nuxt-typed-vuex": "latest",
     "qrcode": "^1.4.4",
-    "ts-node": "^8.3.0",
     "vue": "latest",
     "vue-property-decorator": "^9.1.2",
     "vue-qrcode": "^0.4.0",
@@ -113,11 +112,10 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/style-resources": "latest",
-    "@nuxtjs/stylelint-module": "^4.0.0",
     "@types/jest": "^26.0.23",
-    "@types/stylelint": "^9.10.1",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
+    "@vue/test-utils": "^1.2.0",
     "babel-eslint": "^10.1.0",
     "consola": "^2.15.3",
     "dotenv": "latest",
@@ -150,13 +148,13 @@
     "vue-property-decorator": "latest",
     "vuex": "^3.6.2",
     "web3-core": "latest",
-    "webpack": "5.36.2"
+    "webpack": "4.46.0"
   },
   "peerDependencies": {
-    "@babel/core": "*",
-    "@babel/runtime": "*",
-    "@portis/web3": "*",
-    "prettier-plugin-svelte": "*",
+    "@babel/core@": "*",
+    "@babel/runtime@": "*",
+    "@portis/web3@": "*",
+    "prettier-plugin-svelte@": "*",
     "typed-vuex@": "*"
   },
   "resolutions": {
