--- a/package.json
+++ b/package.json
@@ -75,14 +75,14 @@
   },
   "dependencies": {
     "@matterlabs/zk-wallet-onboarding": "1.18.6",
-    "@nuxt/components": "latest",
+    "@nuxt/components": "2.1.6",
     "@nuxt/http": "^0.6.4",
     "@nuxt/typescript-runtime": "latest",
     "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/sentry": "latest",
-    "@nuxtjs/toast": "latest",
+    "@nuxtjs/toast": "^3.3.1",
     "ethereum-blockies-base64": "^1.0.2",
-    "ethers": "latest",
+    "ethers": "^5.1.0",
     "lottie-web": "^5.7.8",
     "moment-timezone": "^0.5.33",
     "nuxt": "latest",
@@ -90,72 +90,52 @@
     "nuxt-typed-vuex": "latest",
     "qrcode": "^1.4.4",
     "vue": "latest",
-    "vue-property-decorator": "^9.1.2",
-    "vue-qrcode": "^0.4.0",
+    "vue-qrcode": "^0.3.5",
     "vue-scrollto": "^2.20.0",
-    "web3": "latest",
-    "zksync": "latest"
+    "web3": "^1.3.5",
+    "zksync": "^0.10.9"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
     "@babel/runtime": "^7.13.10",
     "@ethersproject/logger": "^5.1.0",
-    "@ethersproject/providers": "^5.1.2",
+    "@ethersproject/providers": "^5.1.0",
     "@inkline/nuxt": "^2.3.6",
-    "@nuxt/test-utils": "^0.2.2",
     "@nuxt/types": "latest",
     "@nuxt/typescript": "latest",
     "@nuxt/typescript-build": "latest",
-    "@nuxtjs/dotenv": "latest",
-    "@nuxtjs/eslint-config": "latest",
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
-    "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/style-resources": "latest",
-    "@types/jest": "^26.0.23",
-    "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest",
-    "@vue/test-utils": "^1.2.0",
-    "babel-eslint": "^10.1.0",
-    "consola": "^2.15.3",
-    "dotenv": "latest",
-    "eslint": "latest",
-    "eslint-config-prettier": "latest",
-    "eslint-config-standard": ">=12.0.0",
-    "eslint-loader": "latest",
-    "eslint-plugin-import": ">=2.18.0",
-    "eslint-plugin-jest": ">=22.7.1",
-    "eslint-plugin-node": ">=9.1.0",
-    "eslint-plugin-nuxt": ">=0.4.3",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-promise": ">=4.2.1",
-    "eslint-plugin-standard": ">=4.0.0",
-    "eslint-plugin-vue": "latest",
-    "fork-ts-checker-webpack-plugin": "^6.2.7",
+    "@types/jest": "^26.0.22",
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.23.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "fork-ts-checker-webpack-plugin": "^6.2.0",
     "jest": "^26.6.3",
-    "node-sass": "4.14.1",
-    "nodemon": "latest",
-    "prettier": "latest",
+    "node-sass": "4.14.0",
+    "prettier": "^2.2.1",
     "sass-loader": "10.1.1",
-    "stylelint": "^13.13.1",
-    "stylelint-config-recommended": "^5.0.0",
-    "stylelint-config-standard": "^22.0.0",
+    "stylelint": "^13.12.0",
+    "stylelint-config-recommended": "^4.0.0",
+    "stylelint-config-standard": "^21.0.0",
     "stylelint-scss": "^3.19.0",
-    "ts-loader": "^9.2.1",
-    "typed-vuex": "0.2.0",
+    "typed-vuex": "latest",
     "typescript": "^4.2.4",
-    "vue-class-component": "latest",
-    "vue-property-decorator": "latest",
-    "vuex": "^3.6.2",
-    "web3-core": "latest",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2",
+    "vuex": "3.6.2",
+    "web3-core": "^1.3.5",
     "webpack": "4.46.0"
   },
   "peerDependencies": {
-    "@babel/core@": "*",
-    "@babel/runtime@": "*",
-    "@portis/web3@": "*",
-    "prettier-plugin-svelte@": "*",
-    "typed-vuex@": "*"
+    "@babel/core": "*",
+    "@babel/runtime": "*",
+    "typed-vuex": "*"
   },
   "resolutions": {
     "babel-core": "7.0.0-bridge.0"
