--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -20,4 +20,4 @@ packageExtensions:
     peerDependencies:
       "@babel/core": "*"
 
-yarnPath: .yarn/releases/yarn-2.4.1.cjs
+yarnPath: .yarn/releases/yarn-berry.cjs
