refactor(structure): merged part #1 of 4 from keriat-zkf-486-design-issues + changes
# Changelog

## 1. UI/UX fixes for the mobile devices in portrait mode

Special _mobile-layout.scss. But investing into the ui more is useless since we're moving to the Tailwind

The optimisation was done only for the portrait-mode / width from 320px to 450px
Changes done listed below:

 * index page (non-logged users see it) scaled to fit screen with no scrolls
 * loggin-in status centered and optimized
 * select wallet / provider popup optimized and scaled for different cases (opened, closed etc.)
 * confirmation / rejection popups unified and fixed
 * wallet inside got fixed layout (but it's a matter of the next iteration) — anyway now it's fully adapting the device's height
 * layout-tags unified and optimized (and inside the merge too)

## 2. Merging in process with the ```keriat-zkf-486-design-issuesz```, most relevant but too-changed (_breaking some well-worked flows_). Some sneak-peek of the merge:
 * Types moved to the separate folder src/types and stated in the packages.json
 * firebase updated as well as the rinkeby-beta flow
 * environments updated
 * directory .ide-setup created for the future dev-template-package
 * constants updated and unified

> ...to be continued: it's a #1 merge of 4

BREAKING CHANGE: #ZKF-505, #ZKF-541, #ZKF-493, #ZKF-506, #ZKF-540, #ZKF-536, #ZKF-502, #ZKF-498, #ZKF-497, #ZKF-496

Closes #ZKF-505

--- a/.firebaserc
+++ b/.firebaserc
@@ -20,11 +20,11 @@
         "mainnet-dev": [
           "zksync-vue-mainnet-dev"
         ],
-        "stage": [
-          "stage-mainnet-zksync-vue"
-        ],
         "rinkeby-beta": [
-          "beta-rinkeby-zksync-vue"
+          "rinkeby-beta-zksync-vue"
+        ],
+        "stage": [
+          "stage-zksync-vue"
         ]
       }
     },
