--- a/.prettierignore
+++ b/.prettierignore
@@ -1,14 +1,13 @@
 node_modules/*
 cypress/*
 .nuxt/*
-src/static/*
+src/static/
 .github/*
 .idea/*
 environments/*
 public/*
 _nuxt/*
-src/static/sw.js
-.eslintrc.js
+sw.js
 tests/*
-src/assets/fonts/*
 *.example
+src/assets/fonts/
