feat(UX/UI/refactoring): Multiple chages to the UI/UX for both mobile and desktop versions
## Changed mobile / desktop UI/UX

 * Wallet line was put inside balances page
 * The whole layout was fixed by proportions of the screen both for mobile & destop
 * Optimized Balances.vue -> moved to the index.vue
 * fixed all found spacing issues
 * font-sizes adapted per platform

## Additional refactoring

 * Transactions store optimized
 * TS-config optimized
 * linting reconfigured
 * dropped couple of unused packages

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -11,11 +11,12 @@
     "src/assets/fonts/*"
   ],
   "compilerOptions": {
-    "rootDir": ".src/",
     "lib": [
-      "ES2019",
-      "dom",
-      "node"
+      "es2019",
+      "es2019.object",
+      "esnext",
+      "esnext.asynciterable",
+      "dom"
     ]
   }
 }
