--- a/package.json
+++ b/package.json
@@ -89,7 +89,6 @@
     "nuxt": "latest",
     "nuxt-build-optimisations": "^1.0.3",
     "nuxt-typed-vuex": "latest",
-    "qrcode": "^1.4.4",
     "vue": "latest",
     "vue-qrcode": "^0.3.5",
     "vue-scrollto": "^2.20.0",
@@ -120,6 +119,7 @@
     "jest": "^26.6.3",
     "node-sass": "4.14.0",
     "prettier": "^2.2.1",
+    "qrcode": "*",
     "sass-loader": "10.1.1",
     "stylelint": "^13.12.0",
     "stylelint-config-recommended": "^4.0.0",
