--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
     "jest": "^26.6.3",
     "node-sass": "4.14.0",
     "prettier": "^2.2.1",
-    "qrcode": "*",
+    "qrcode": "^1.0.0",
     "sass-loader": "10.1.1",
     "stylelint": "^13.12.0",
     "stylelint-config-recommended": "^4.0.0",
