--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "@types/jest": "^26.0.22",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
+    "dappeteer": "^1.0.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
@@ -119,6 +120,7 @@
     "jest": "^26.6.3",
     "node-sass": "4.14.0",
     "prettier": "^2.2.1",
+    "puppeteer": "1.16.0",
     "qrcode": "^1.0.0",
     "sass-loader": "10.1.1",
     "stylelint": "^13.12.0",
