--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "vue-qrcode": "^0.3.5",
     "vue-scrollto": "^2.20.0",
     "web3": "^1.3.5",
-    "zksync": "^0.10.9"
+    "zksync": "0.10.9"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
@@ -111,7 +111,6 @@
     "@types/jest": "^26.0.22",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
-    "dappeteer": "^1.0.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
@@ -120,7 +119,6 @@
     "jest": "^26.6.3",
     "node-sass": "4.14.0",
     "prettier": "^2.2.1",
-    "puppeteer": "1.16.0",
     "qrcode": "^1.0.0",
     "sass-loader": "10.1.1",
     "stylelint": "^13.12.0",
