Fix content hidden behind footer

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "ci:validate": "yarn ci && sh cli-process-env.sh 'mainnet' dev 1",
     "deploy:prod": "./cli-deploy-production.sh",
     "dev": "sh cli-process-env.sh 'rinkeby' 'dev' 1 1 && nuxt",
-    "dev-beta": "sh cli-process-env.sh 'rinkeby-beta' 'dev' 1 1 && nuxt",
+    "dev-beta": "sh cli-process-env.sh 'ropsten' 'dev' 1 1 && nuxt",
     "prepare_ci": "yarn ci && sh cli-process-env.sh 'rinkeby'",
     "start": "sh cli-process-env.sh 'rinkeby' 'dev' && nuxt start",
     "build": "sh cli-process-env.sh 'mainnet' 'prod' true && nuxt build",
