ci(Firebase): CI flows fully updated, deps upgraded, lint reconfigured

--- a/.editorconfig
+++ b/.editorconfig
@@ -87,7 +87,7 @@ ij_typescript_align_var_statements = 1
 ij_typescript_array_initializer_new_line_after_left_brace = true
 ij_typescript_array_initializer_right_brace_on_new_line = true
 ij_typescript_array_initializer_wrap = on_every_item
-ij_typescript_assignment_wrap = split_into_lines
+ij_typescript_assignment_wrap = off
 ij_typescript_binary_operation_sign_on_next_line = false
 ij_typescript_binary_operation_wrap = off
 ij_typescript_blacklist_imports = rxjs/Rx,node_modules/**,**/node_modules/**,@angular/material,@angular/material/typings/**
@@ -110,7 +110,7 @@ ij_typescript_do_while_brace_force = never
 ij_typescript_else_on_new_line = false
 ij_typescript_enforce_trailing_comma = keep
 ij_typescript_extends_keyword_wrap = off
-ij_typescript_extends_list_wrap = on_every_item
+ij_typescript_extends_list_wrap = off
 ij_typescript_field_prefix = _
 ij_typescript_file_name_style = relaxed
 ij_typescript_finally_on_new_line = false
@@ -228,7 +228,7 @@ ij_typescript_ternary_operation_signs_on_next_line = false
 ij_typescript_ternary_operation_wrap = on_every_item
 ij_typescript_union_types_wrap = on_every_item
 ij_typescript_use_chained_calls_group_indents = false
-ij_javascript_force_quote_style = true
+ij_typescript_use_double_quotes = true
 ij_typescript_use_explicit_js_extension = global
 ij_typescript_use_path_mapping = always
 ij_typescript_use_public_modifier = false
@@ -264,7 +264,7 @@ ij_javascript_align_var_statements = 1
 ij_javascript_array_initializer_new_line_after_left_brace = true
 ij_javascript_array_initializer_right_brace_on_new_line = true
 ij_javascript_array_initializer_wrap = on_every_item
-ij_javascript_assignment_wrap = on_every_item
+ij_javascript_assignment_wrap = off
 ij_javascript_binary_operation_sign_on_next_line = false
 ij_javascript_binary_operation_wrap = off
 ij_javascript_blacklist_imports = rxjs/Rx,node_modules/**,**/node_modules/**,@angular/material,@angular/material/typings/**
@@ -285,7 +285,7 @@ ij_javascript_do_while_brace_force = never
 ij_javascript_else_on_new_line = false
 ij_javascript_enforce_trailing_comma = keep
 ij_javascript_extends_keyword_wrap = off
-ij_javascript_extends_list_wrap = on_every_item
+ij_javascript_extends_list_wrap = off
 ij_javascript_field_prefix = _
 ij_javascript_file_name_style = relaxed
 ij_javascript_finally_on_new_line = false
