--- a/.eslintignore
+++ b/.eslintignore
@@ -11,3 +11,19 @@ src/static/sw.js
 .eslintrc.js
 tests/*
 *.example
+fonts/**
+src/assets/imgs/*
+.github/*
+.idea/*
+environments/*
+public/*
+src/static/sw.js
+*.css
+*.eot
+*.svg
+*.ttf
+*.woff
+*.woff2
+successCheckmark.json
+sw.js
+./src/static/sw.js
