ci(firebase): Added still missing dev-mainnet

--- a/firebase.json
+++ b/firebase.json
@@ -19,6 +19,15 @@
       ]
     },
     {
+      "target": "dev-mainnet",
+      "public": "public",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ]
+    },
+    {
       "target": "prod-ropsten",
       "public": "public",
       "ignore": [
