update(CI): Missing host (url) was added: mainnet-wallet-zksync.web.app

--- a/.firebaserc
+++ b/.firebaserc
@@ -19,6 +19,10 @@
         ],
         "stage-mainnet": [
           "zksync-vue"
+        ],
+        "dev-mainnet": [
+          "mainnet-wallet-zksync",
+          "zksync-vue"
         ]
       }
     },
