--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -10,14 +10,18 @@ packageExtensions:
   "@nuxtjs/eslint-config-typescript@*":
     peerDependencies:
       eslint: "*"
-  "@portis/web3@*":
-    peerDependencies:
-      "@babel/core": "*"
   jest@*:
     peerDependencies:
       "@babel/core": "*"
   web3-provider-engine@*:
     peerDependencies:
       "@babel/core": "*"
+  "@walletconnect/web3-provider@*":
+     peerDependencies:
+       "@babel/core": "*"
+
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
+    spec: "@yarnpkg/plugin-interactive-tools"
 
 yarnPath: .yarn/releases/yarn-berry.cjs
