--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "stylelint-scss": "latest",
     "typescript": "^4.2.4",
     "vue-property-decorator": "latest",
+    "vuex": "^3.6.2",
     "web3-core": "^1.3.5",
     "webpack": "^4.46.0"
   },
@@ -148,7 +149,7 @@
     "yarn spell-check"
   ],
   "scripts": {
-    "local": "sh ./cli-process-env.sh 'rinkeby' 'dev' 1 1",
+    "local": "sh ./cli-process-env.sh 'ropsten' 'dev' 1 1",
     "dev": "yarn local && nuxt",
     "generate": "nuxt generate ",
     "start": "yarn local && nuxt start",
