--- a/.github/workflows/firebase-beta.yml
+++ b/.github/workflows/firebase-beta.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: "[Setup] building dependencies"
-        run: bash cli-dev.sh ci && yarn install --immutable
+        run: sh cli-dev.sh ci && yarn install --immutable
 
       - name: "[Ropsten release] Configuring ropsten env"
         run: yarn ci:build:ropsten
