--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "@ethersproject/logger": "^5.0.9",
+    "@ethersproject/units": "5.3.0",
     "@matterlabs/zk-wallet-onboarding": "1.18.6",
     "@nuxt/http": "latest",
     "@nuxt/typescript-runtime": "latest",
@@ -63,7 +64,7 @@
     "@nuxtjs/toast": "latest",
     "@walletconnect/web3-provider": "^1.3.6",
     "ethereum-blockies-base64": "latest",
-    "ethers": "^5.0.31",
+    "ethers": "5.1.3",
     "lottie-web": "^5.7.8",
     "moment-timezone": "^0.5.33",
     "nuxt": "latest",
