--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@nuxtjs/eslint-config-typescript": "latest",
     "@nuxtjs/google-fonts": "latest",
     "@nuxtjs/style-resources": "latest",
+    "@nuxtjs/tailwindcss": "^4.2.0",
     "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
@@ -111,6 +112,7 @@
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "jest": "^26.6.3",
     "node-sass": "4.14.0",
+    "postcss": "latest",
     "prettier": "^2.2.1",
     "qrcode": "^1.0.0",
     "sass-loader": "^10.1.1",
