--- a/package.json
+++ b/package.json
@@ -60,10 +60,12 @@
     "@ethersproject/units": "5.3.0",
     "@matterlabs/zk-wallet-onboarding": "1.18.6",
     "@nuxt/http": "latest",
+    "@nuxt/test-utils": "^0.2.2",
     "@nuxt/typescript-runtime": "latest",
     "@nuxtjs/google-gtag": "latest",
     "@nuxtjs/sentry": "latest",
     "@nuxtjs/toast": "latest",
+    "@schmid.digital/dappeteer": "^2.0.2",
     "@walletconnect/web3-provider": "^1.3.6",
     "ethereum-blockies-base64": "latest",
     "ethers": "5.1.3",
@@ -73,9 +75,12 @@
     "nuxt-build-optimisations": "latest",
     "nuxt-typed-vuex": "latest",
     "oh-vue-icons": "^0.4.3",
+    "puppeteer": "^10.0.0",
+    "ts-jest": "^27.0.3",
     "typed-vuex": "latest",
     "vue": "2.*",
     "vue-class-component": "latest",
+    "vue-jest": "^3.0.7",
     "vue-qrcode": "latest",
     "vue-router": "^3.5.1",
     "vue-scrollto": "^2.20.0",
@@ -109,7 +114,7 @@
     "eslint-plugin-prettier-vue": "^2.1.1",
     "eslint-plugin-vue": "^7.7.0",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
-    "jest": "^26.6.3",
+    "jest": "^27.0.5",
     "node-sass": "4.14.0",
     "prettier": "^2.2.1",
     "qrcode": "^1.0.0",
