--- a/.github/workflows/firebase-pr.yml
+++ b/.github/workflows/firebase-pr.yml
@@ -17,7 +17,7 @@ jobs:
         run: yarn ci:build:rinkeby
 
       - name: Deploying to rinkeby [preview]
-        uses: FirebaseExtended/action-hosting-deploy@v0.5-alpha
+        uses: matter-labs/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}"
@@ -30,7 +30,7 @@ jobs:
         run: yarn ci:build:ropsten
 
       - name: Deploying to ropsten [preview]
-        uses: FirebaseExtended/action-hosting-deploy@v0.5-alpha
+        uses: matter-labs/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}"
