Add withdraw test. Trying use @warsmit/dappeteer repo

--- a/.github/workflows/firebase-pr.yml
+++ b/.github/workflows/firebase-pr.yml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Run tests
         run: |
+          yarn add '@warsmit/dappeteer@https://github.com/warsmit/dappeteer.git#ms/develop' || true
           yarn dev
           yarn test -- ./tests/*
 
