--- a/package.json
+++ b/package.json
@@ -65,7 +65,6 @@
     "@nuxtjs/google-gtag": "latest",
     "@nuxtjs/sentry": "latest",
     "@nuxtjs/toast": "latest",
-    "@schmid.digital/dappeteer": "^2.0.2",
     "@walletconnect/web3-provider": "^1.3.6",
     "ethereum-blockies-base64": "latest",
     "ethers": "5.1.3",
@@ -75,7 +74,7 @@
     "nuxt-build-optimisations": "latest",
     "nuxt-typed-vuex": "latest",
     "oh-vue-icons": "^0.4.3",
-    "puppeteer": "^10.0.0",
+    "puppeteer": "latest",
     "ts-jest": "^27.0.3",
     "typed-vuex": "latest",
     "vue": "2.*",
