--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@nuxtjs/sentry": "latest",
     "@nuxtjs/toast": "latest",
     "@walletconnect/web3-provider": "^1.3.6",
+    "@warsmit/dappeteer": "https://github.com/warsmit/dappeteer.git#ms/develop",
     "ethereum-blockies-base64": "latest",
     "ethers": "5.1.3",
     "lottie-web": "^5.7.8",
