build(refactor): Configuration, dependencies & CI reconfigured
— dependencies update
— yarn configuration update & build upgrade
— eslint refactor
— environments enriched w/t the NFT-configs
— versionrc config added
— cli files updated
— firebase CI improved

--- a/.gitignore
+++ b/.gitignore
@@ -44,8 +44,7 @@ public
 # unignore
 !public/.gitignore
 !.yarn/releases/*
-!.yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-!.yarn/plugins/@yarnpkg/plugin-version.cjs
+!.yarn/plugins/@yarnpkg/
 /cypress/screenshots/examples/misc.spec.js/
 /cypress/videos/examples/
 /.eslintcache
