--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -17,8 +17,4 @@ packageExtensions:
     peerDependencies:
       "@babel/core": "*"
 
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
-    spec: "@yarnpkg/plugin-version"
-
-yarnPath: .yarn/releases/yarn-berry.cjs
+yarnPath: .yarn/releases/yarn-2.4.2.cjs
