--- a/environments/.env.rinkeby-beta
+++ b/environments/.env.rinkeby-beta
@@ -10,3 +10,5 @@ GTAG_ID=GTM-P9S4QSF
 ZK_SPECIAL_API="rinkeby-beta-api.zksync.io"
 ZK_SPECIAL_SCAN="rinkeby-beta-scan.zksync.dev"
 ZK_NETWORK="rinkeby-beta"
+ALLOW_NFT=1
+MINT_NFT=zknft.xyz
