--- a/.github/workflows/firebase-prod.yml
+++ b/.github/workflows/firebase-prod.yml
@@ -13,14 +13,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install dependencies
+      - name: "[Setup] building dependencies"
         run: bash cli-dev.sh ci && yarn install --immutable
 
-      - name: Build mainnet
-        run: yarn ci:build:prod
-
-      - name: Deploy to mainnet
-        uses: matter-labs/action-hosting-deploy@v0
+      - name: Building mainnet [prod]
+        run: "yarn run ci:build:mainnet"
+      - uses: matter-labs/action-hosting-deploy@v0
         with:
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE_MAINNET }}"
           target: mainnet
