--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "@matterlabs/zksync-zkwallet-vue",
+  "version": "2.4.2",
+  "author": "Matter Labs",
   "title": "zkSync.io Wallet | Try solution for the Ethereum scalability\n with zero security compromises",
-  "main": "nuxt.config.ts",
-  "types": [
-    "src/types/index.d.ts",
-    "src/types/lib.d.ts"
-  ],
-  "files": [
-    "src/types",
-    "src"
+  "description": "zkWallet was created to unleash the power of zkSync L2 operations and give anyone an access to L2 zkSync features on mainnet",
+  "homepage": "https://wallet.zksync.io",
+  "bugs": {
+    "url": "https://github.com/matter-labs/zksync-wallet-vue/issues"
+  },
+  "repository": [
+    "matter-labs/zksync-wallet-vue"
   ],
   "keywords": [
     "zksync",
@@ -24,6 +25,12 @@
     "dapp",
     "ethers"
   ],
+  "private": true,
+  "main": "nuxt.config.ts",
+  "types": [
+    "src/types/index.d.ts",
+    "src/types/lib.d.ts"
+  ],
   "license": "MIT",
   "licenses": [
     {
@@ -35,11 +42,10 @@
       "url": "https://opensource.org/licenses/apache2.0.php"
     }
   ],
-  "version": "2.4.2",
-  "homepage": "https://wallet.zksync.io",
-  "description": "zkWallet was created to unleash the power of zkSync L2 operations and give anyone an access to L2 zkSync features on mainnet",
-  "repository": "https://github.com/matter-labs/zksync-wallet-vue",
-  "author": "Matter Labs",
+  "files": [
+    "src/types",
+    "src"
+  ],
   "browserslist": {
     "production": [
       ">0.2%",
@@ -52,28 +58,27 @@
       "last 1 safari version"
     ]
   },
-  "bugs": {
-    "url": "https://github.com/matter-labs/zksync-wallet-vue/issues"
-  },
   "dependencies": {
+    "@babel/core": "7.12.17",
+    "@babel/preset-env": "7.12.17",
+    "@babel/runtime": "^7.14.6",
     "@ethersproject/logger": "^5.0.9",
-    "@ethersproject/units": "5.3.0",
     "@matterlabs/zk-wallet-onboarding": "1.18.6",
     "@nuxt/http": "latest",
     "@nuxt/typescript-runtime": "latest",
-    "@nuxtjs/google-gtag": "latest",
+    "@nuxtjs/gtm": "^2.4.0",
     "@nuxtjs/sentry": "latest",
+    "@nuxtjs/style-resources": "latest",
     "@nuxtjs/toast": "latest",
     "@walletconnect/web3-provider": "^1.3.6",
     "ethereum-blockies-base64": "latest",
-    "ethers": "5.1.3",
+    "ethers": "^5.4.1",
     "lottie-web": "^5.7.8",
     "moment-timezone": "^0.5.33",
     "nuxt": "latest",
     "nuxt-build-optimisations": "latest",
     "nuxt-typed-vuex": "latest",
-    "oh-vue-icons": "^0.4.3",
-    "typed-vuex": "latest",
+    "oh-vue-icons": "latest",
     "vue": "2.*",
     "vue-class-component": "latest",
     "vue-qrcode": "latest",
@@ -83,41 +88,35 @@
     "zksync": "beta"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/preset-env": "^7.13.9",
-    "@babel/runtime": "^7.13.10",
     "@ethersproject/logger": "^5.1.0",
     "@ethersproject/providers": "^5.1.0",
     "@inkline/nuxt": "^2.3.6",
     "@nuxt/types": "latest",
     "@nuxt/typescript": "latest",
     "@nuxt/typescript-build": "latest",
-    "@nuxtjs/dotenv": "latest",
-    "@nuxtjs/eslint-config-typescript": "latest",
+    "@nuxtjs/dotenv": "1.4.1",
+    "@nuxtjs/eslint-config-typescript": "^6.0.1",
     "@nuxtjs/google-fonts": "latest",
-    "@nuxtjs/style-resources": "latest",
     "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
-    "babel-core": "^7.0.0-bridge.0",
     "commitlint": "^11.0.0",
     "cspell": "latest",
-    "dotenv": "8.2.0",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.30.0",
     "eslint-plugin-prettier-vue": "^2.1.1",
-    "eslint-plugin-vue": "^7.7.0",
+    "eslint-plugin-vue": "^7.13.0",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "jest": "^26.6.3",
     "node-sass": "4.14.0",
-    "postcss": "latest",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.2",
     "qrcode": "^1.0.0",
     "sass-loader": "^10.1.1",
     "stylelint": "latest",
-    "stylelint-config-standard": "latest",
+    "stylelint-config-standard": "^22.0.0",
     "stylelint-scss": "latest",
+    "ts-loader": "8.2.0",
+    "typed-vuex": "^0.2.0",
     "typescript": "^4.2.4",
     "vue-property-decorator": "latest",
     "vuex": "^3.6.2",
@@ -127,6 +126,7 @@
   "peerDependencies": {
     "@babel/core": "*",
     "@babel/runtime": "*",
+    "lodash": "*",
     "typed-vuex": "*",
     "vuex": "3.5.1"
   },
@@ -137,9 +137,8 @@
     "typescript": true
   },
   "optionalDependencies": {
-    "@sentry/webpack-plugin": "^1.14.0",
-    "fs-extra": "^9.1.0",
-    "fsevents": "^2.3.2"
+    "fs-extra": "latest",
+    "fsevents": "latest"
   },
   "husky": {
     "hooks": {
@@ -155,12 +154,11 @@
   ],
   "scripts": {
     "local": "sh ./cli-process-env.sh 'rinkeby' 'dev' 1 1",
-    "dev": "yarn local && nuxt",
-    "generate": "nuxt generate ",
-    "start": "yarn local && nuxt start",
-    "build": "yarn local && nuxt build",
+    "dev": "yarn local && nuxt-ts",
+    "generate": "nuxt-ts generate ",
+    "start": "yarn local && nuxt-ts start",
+    "build": "yarn local && nuxt-ts build",
     "ci:build:dev-rinkeby": "sh cli-process-env.sh 'rinkeby' dev 1 && yarn generate --fail-on-error",
-    "ci:build:dev-mainnet": "sh cli-process-env.sh 'mainnet' dev 1 && yarn generate --fail-on-error",
     "ci:build:rinkeby-beta": "yarn ci:prepare:rinkeby-beta && yarn generate --fail-on-error",
     "ci:build:prod": "yarn ci:prepare:mainnet && yarn generate --fail-on-error",
     "ci:build:rinkeby": "yarn ci:prepare:rinkeby && yarn generate --fail-on-error",
