--- a/.github/workflows/firebase-pr.yml
+++ b/.github/workflows/firebase-pr.yml
@@ -2,33 +2,104 @@
 # https://github.com/firebase/firebase-tools
 
 name: "Deploy preview"
-"on": pull_request
+on: [pull_request]
+
 jobs:
   build_and_preview:
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     runs-on: ubuntu-latest
     environment: test
     outputs:
-      rinkeby_urls: "${{ steps.rinkeby_deploy.outputs.urls }}"
+      rinkeby_urls: "${{ steps.rinkeby_deploy.outputs.urls || steps.rinkeby_beta_deploy.outputs.urls }}"
     steps:
       - uses: actions/checkout@v2
       - run: bash cli-dev.sh ci
 
       - name: "Build rinkeby"
+        if: github.base_ref != 'beta'
         run: yarn run ci:build:rinkeby
       - uses: matter-labs/action-hosting-deploy@v0
+        if: github.base_ref != 'beta'
+        id: rinkeby_deploy
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}"
           target: prod-rinkeby
           projectId: zksync-vue
 
-
       - name: "Build ropsten"
+        if: github.base_ref != 'beta'
         run: yarn run ci:build:ropsten
       - uses: matter-labs/action-hosting-deploy@v0
+        if: github.base_ref != 'beta'
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
-          projectId: zksync-vue
           target: prod-ropsten
+          projectId: zksync-vue
+
+      - name: "Build rinkeby-beta"
+        if: github.base_ref == 'beta'
+        run: yarn run ci:build:rinkeby-beta
+      - uses: matter-labs/action-hosting-deploy@v0
+        if: github.base_ref == 'beta'
+        id: rinkeby_beta_deploy
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}"
+          target: rinkeby-beta
+          projectId: zksync-vue
+
+      - name: "Build ropsten-beta"
+        if: github.base_ref == 'beta'
+        run: yarn run ci:build:ropsten-beta
+      - uses: matter-labs/action-hosting-deploy@v0
+        if: github.base_ref == 'beta'
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}"
+          target: ropsten-beta
+          projectId: zksync-vue
+
+  testing:
+    needs: build_and_preview
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+
+      - name: Checkout zksync-test-ui repository
+        uses: actions/checkout@v2
+        with:
+          repository: matter-labs/zksync-test-ui
+          ref: master
+          token: ${{ secrets.TEST_ACCESS_TOKEN }}
+      
+      - name: Install dependencies
+        run: |
+          bash ./cli-dev.sh clean yarn
+          yarn install --immutable || true
+
+      # this is needed to run chromium (puppeteer / dappeteer) with metamask extension.
+      - name: Install setup-node
+        uses: actions/setup-node@v1
+        env:
+          PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
+        with:
+          args: install
+
+      - name: Launch tests
+        uses: mujo-code/puppeteer-headful@8baa091f83c74d2eda8603b7f9990b20535e7a9c
+        env:
+          CI: 'true'
+          TEST_HOST: "${{fromJson(needs.build_and_preview.outputs.rinkeby_urls)[0]}}"
+        with:
+          args: yarn test --runInBand
+
+      - name: Save artifacts
+        uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: wallet-artifacts_${{ github.run_number }}_${{ steps.date.outputs.date }}
+          path: artifacts/*
