--- a/.github/workflows/firebase-prod.yml
+++ b/.github/workflows/firebase-prod.yml
@@ -2,10 +2,11 @@
 # https://github.com/firebase/firebase-tools
 
 name: "Deploy production"
-"on":
+on:
   push:
     branches:
       - master
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -22,4 +23,24 @@ jobs:
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE_MAINNET }}"
           target: mainnet
           projectId: zksync-vue-mainnet
+          channelID: live
+
+      - name: "Build ropsten [prod]"
+        run: yarn run ci:build:ropsten
+      - uses: matter-labs/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}"
+          target: prod-ropsten
+          projectId: zksync-vue
+          channelID: live
+
+      - name: "Build rinkeby [prod]"
+        run: yarn run ci:build:rinkeby
+      - uses: matter-labs/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}"
+          target: prod-rinkeby
+          projectId: zksync-vue
           channelID: live
